# sugarmaker

./: .gitignore  AUTHORS  Dockerfile  LICENSE  Makefile.am  NEWS  README.md  YespowerAdvc.c  YespowerIots.c  YespowerIso.c  YespowerItc.c  YespowerLitb.c  YespowerLtncg.c  YespowerMbc.c  YespowerNull.c  YespowerRes.c  YespowerSugar.c  YespowerUrx.c  YespowerYtn.c  build-aarch64-static.sh  build-aarch64.sh  build-armv7l-static.sh  build-armv7l.sh  build-linux32-static.sh  build-linux32.sh  build-linux64-static.sh  build-linux64.sh  build-osx-static.sh  build-osx.sh  build-w32-msse2.sh  build-w32-static-msse2.sh  build-w32-static.sh  build-w32.sh  build-w64-static.sh  build-w64.sh  build.sh  configure.ac  cpu-miner.c  miner.h  minerd.1  (+2 more)
depends/bat/: run-mainnet-solo.bat  run-mainnet-stratum.bat  run-testnet-stratum.bat
depends/sh/: run-mainnet-solo.sh  run-testnet-solo.sh
deps-linux32/: deps-linux32.sh
deps-linux64/: deps-linux64.sh
deps-osx/: deps-osx.sh
deps-win32/curl-7.54.1/: curl-config  libtool
deps-win32/curl-7.54.1/lib/: curl_config.h  libcurl.la
deps-win32/curl-7.54.1/src/: tool_hugehelp.c
deps-win32/curl-7.54.1/tests/: configurehelp.pm
deps-win32/i686-w64-mingw32/lib/: libcurl.la
deps-win32/pthread-win32/: pthread.2005.vcproj  pthread.2008.sln  pthread.2008.vcproj  pthread.2010.vcxproj  pthread.2012.vcxproj  pthread.2013.sln  pthread.2013.vcxproj.filters  pthread.2015.sln  pthread.2015.vcxproj  pthread_lib.2005.vcproj  pthread_lib.2008.vcproj  pthread_lib.2010.vcxproj  pthread_lib.2012.vcxproj.filters  pthread_lib.2013.vcxproj.filters
deps-win64/curl-7.54.1/: curl-config  libtool
deps-win64/pthread-win32/: pthread.2005.sln  pthread.2010.sln  pthread.2010.vcxproj.filters  pthread.2012.sln  pthread.2012.vcxproj.filters  pthread.2013.vcxproj  pthread_lib.2010.vcxproj.filters  pthread_lib.2012.vcxproj  pthread_lib.2013.vcxproj  pthread_lib.2015.vcxproj
mining-script/bat/: run-bench.bat  run-mainnet-pool.bat  run-mainnet-solo.bat  run-testnet-pool.bat  run-testnet-solo.bat
mining-script/sh/: run-bench.sh  run-mainnet-pool.sh  run-mainnet-solo.sh  run-testnet-pool.sh  run-testnet-solo.sh  run-testnet-stratum.sh
yespower-1.0.1-power2b/: benchmark.c  blake2b.c  sha256-p2b.c  sha256-p2b.h  tests.c  yespower-opt-p2b.c  yespower-opt.c  yespower-p2b.h  yespower-ref-p2b.c
(+15 files in other folders)
